2009-01-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.mdp:
	* MonoDevelop.Core.ProgressMonitoring/AsyncOperation.cs: Added default
	implementation of IAsyncOperation

2009-01-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core/SystemAssemblyService.cs: Handle PKG_CONFIG_LIBDIR.
	If it's not set, sniff for the install prefixes of MD, Mono and
	pkg-config and the associated pkgconfig directories.

2009-01-08  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/SystemAssemblyService.cs: In GetAssemblyLocation,
	added fast path for mscorlib.

2009-01-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/FileService.cs: Fix logic for IsInvalidFileName.

2008-12-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Serialization/DataContext.cs: Allow registering new
	properties which are not external.

2008-12-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.mdp: Updated.

	* MonoDevelop.Core/FileService.cs: Added method for checking validity of
	paths.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* frameworks.xml: Add missing lib.

	* Makefile.am:
	* MonoDevelop.Core.mdp:
	* MonoDevelop.Core/PropertyService.cs:
	* MonoDevelop.Core/SystemAssemblyService.cs:
	* MonoDevelop.Core.ProgressMonitoring/NullAsyncOperation.cs: No more
	warnings.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/SystemAssemblyService.cs: Added method for checking
	if an assembly is in the gac.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/SystemAssemblyService.cs: Nullref fixes.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* frameworks.xml:
	* MonoDevelop.Core.mdp:
	* MonoDevelop.Core/SystemPackage.cs:
	* MonoDevelop.Core/TargetFramework.cs:
	* MonoDevelop.Core/SystemAssemblyService.cs:
	* MonoDevelop.Core.AddIns/PackageExtensionNode.cs:
	* MonoDevelop.Core.Serialization/ISerializationAttributeProvider.cs: