@@ -1,3 +1,12 @@
+2009-01-22  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Projects/ProjectService.cs:
+	* MonoDevelop.Projects.Extensions/ItemPropertyCodon.cs:
+	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Added
+	support for SkipEmpty in the serializer. When set to true for a
+	property, if the element generated by the property is empty, it will
+	not be serialized.
+
 2009-01-20  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Projects/PropertyBag.cs: Avoid doubly serialising nodes
