@@ -1,3 +1,13 @@
+2009-01-22  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Core.Serialization/DataContext.cs:
+	* MonoDevelop.Core.Serialization/ItemProperty.cs:
+	* MonoDevelop.Core.Serialization/ClassDataType.cs:
+	* MonoDevelop.Core.Serialization/ItemPropertyAttribute.cs: Added support
+	for SkipEmpty in the serializer. When set to true for a property, if
+	the element generated by the property is empty, it will not be
+	serialized.
+
 2009-01-19  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am:
